[tool.poetry]
name = "repl_python3_Solar-System-Ephemerids"
version = "0.1.0"
description = ""
authors = ["matveypol003 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^2.2.0"
astropy = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
